bpo-40631: Improve error message when deleting single starred element